--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.8.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@tailwindcss/postcss": "^4.0.6",
     "@tanstack/react-query": "^5.66.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "framer-motion": "^12.4.2",
     "js-cookie": "^3.0.5",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -22,7 +31,7 @@
     "@types/react": "19.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17"
   }
 }
