--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,11 @@
     "js-cookie": "^3.0.5",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
