--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,24 @@
     "@tanstack/react-query": "^5.66.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.2",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.1.1",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "nookies": "^2.5.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.0.1",
+    "recharts": "^2.15.1",
+    "rsuite": "^5.78.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
