--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@tailwindcss/postcss": "^4.0.6",
     "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-table": "^8.21.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
@@ -22,9 +23,8 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.1.1",
-    "next": "15.1.6",
+    "next": "^15.2.4",
     "next-themes": "^0.4.4",
-    "nookies": "^2.5.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
