--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.4.2",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "lodash.debounce": "^4.0.8",
     "maplibre-gl": "^5.1.1",
     "next": "^15.2.4",
     "next-themes": "^0.4.4",
