--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.8.0",
+    "@chakra-ui/react": "^3.15.1",
     "@dnd-kit/accessibility": "^3.1.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@tailwindcss/postcss": "^4.0.6",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.21.2",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
@@ -27,8 +25,8 @@
     "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "maplibre-gl": "^5.1.1",
-    "next": "^15.2.4",
-    "next-themes": "^0.4.4",
+    "next": "^15.3.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -42,10 +40,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.6",
     "@types/node": "22.13.1",
     "@types/react": "19.0.8",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint-config-next": "^15.3.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17"
   }
