--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,13 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
     "prisma": "^6.3.1",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.4"
   }
 }
